tests/expects/arg_count_failure/test_too_few_args.expect
error: Argument count mismatch
  --> arg_count_failure/test_too_few_args.truk:6:15
  |
5 | fn main() : i32 {
6 |     return add(5);
  |               ^
7 | }
  |

Compilation failed with 1 error(s)
